--- a/Quorum/lib/Dockerfile
+++ b/Quorum/lib/Dockerfile
@@ -9,18 +9,18 @@ WORKDIR /work
 
 RUN apt-get update && \
     apt-get install -y \
-            build-essential \
-            git \
-            libdb-dev \
-            libleveldb-dev \
-            libsodium-dev \
-            zlib1g-dev \
-            libtinfo-dev \
-            sysvbanner \
-            wget \
-            wrk \
-            xz-utils \
-            dnsutils \
+            build-essential=12.1ubuntu2  \
+            git=1:2.7.4-0ubuntu1.4  \
+            libdb-dev=1:5.3.21~exp1ubuntu2  \
+            libleveldb-dev=1.18-5  \
+            libsodium-dev=1.0.8-5 \
+            zlib1g-dev=1:1.2.8.dfsg-2ubuntu4.1 \
+            libtinfo-dev=6.0+20160213-1ubuntu1 \
+            sysvbanner=1.0.15 \
+            wget=1.17.1-1ubuntu1.4 \
+            wrk=4.0.1-2 \
+           # xz-utils=5.1.1alpha+20120614-2ubuntu2 \
+            dnsutils=1:9.10.3.dfsg.P4-8ubuntu1.10 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN wget -q https://github.com/jpmorganchase/constellation/releases/download/v0.3.2/constellation-0.3.2-ubuntu1604.tar.xz && \
@@ -55,20 +55,20 @@ ENV LANG=C.UTF-8 \
   REFRESHED_AT=2017-06-07-2
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends software-properties-common && \
+    apt-get install -y --no-install-recommends software-properties-common=0.96.20.7 && \
     add-apt-repository ppa:ethereum/ethereum && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        libdb-dev \
-        libleveldb-dev \
-        libsodium-dev \
-        zlib1g-dev \
-        libtinfo-dev \
-        netbase \
-        ca-certificates \
-        curl \
-        solc \
-        dnsutils && \
+        libdb-dev=1:5.3.21~exp1ubuntu2 \
+        libleveldb-dev=1.18-5 \
+        libsodium-dev=1.0.8-5 \
+        zlib1g-dev=1:1.2.8.dfsg-2ubuntu4.1 \
+        libtinfo-dev=6.0+20160213-1ubuntu1 \
+        netbase=5.3 \
+        ca-certificates=20170717~16.04.1 \
+        curl=7.47.0-1ubuntu2.8 \
+        solc=1:0.4.24-0ubuntu1~xenial \
+        dnsutils=1:9.10.3.dfsg.P4-8ubuntu1.10 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /templates && mkdir -p /scripts
